update docker tag

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,11 +6,11 @@ jobs:
       - run:
           name: Build an amd64 container image
           command: |
-            docker build -t huangqw/breeze:alpine-gcc -f golang-gcc/Dockerfile golang-gcc
-            docker run -v $(pwd):/go/src/github.com/wise2c-devops/pagoda -w /go/src/github.com/wise2c-devops/pagoda huangqw/breeze:alpine-gcc go build -buildvcs=false
-            docker build -t huangqw/breeze/pagoda:amd64-$CIRCLE_BRANCH .
+            docker build -t huangqw/devops/golang:alpine-gcc -f golang-gcc/Dockerfile golang-gcc
+            docker run -v $(pwd):/go/src/github.com/wise2c-devops/pagoda -w /go/src/github.com/wise2c-devops/pagoda huangqw/devops/golang:alpine-gcc go build -buildvcs=false
+            docker build -t huangqw/pagoda:amd64-$CIRCLE_BRANCH .
             docker login -u huangqw -p Hqw@ll1107
-            docker push huangqw/breeze/pagoda:amd64-$CIRCLE_BRANCH
+            docker push huangqw/pagoda:amd64-$CIRCLE_BRANCH
 
   build-tags-amd64:
     machine: true
@@ -19,11 +19,11 @@ jobs:
       - run:
           name: Build an amd64 container image
           command: |
-            docker build -t huangqw/breeze/golang:alpine-gcc -f golang-gcc/Dockerfile golang-gcc
-            docker run -v $(pwd):/go/src/github.com/wise2c-devops/pagoda -w /go/src/github.com/wise2c-devops/pagoda huangqw/breeze/golang:alpine-gcc go build
-            docker build -t huangqw/breeze/pagoda:amd64-$CIRCLE_TAG .
+            docker build -t huangqw/devops/golang:alpine-gcc -f golang-gcc/Dockerfile golang-gcc
+            docker run -v $(pwd):/go/src/github.com/wise2c-devops/pagoda -w /go/src/github.com/wise2c-devops/pagoda huangqw/devops/golang:alpine-gcc go build
+            docker build -t huangqw/pagoda:amd64-$CIRCLE_TAG .
             docker login -u huangqw -p Hqw@ll1107
-            docker push huangqw/breeze/pagoda:amd64-$CIRCLE_TAG
+            docker push huangqw/pagoda:amd64-$CIRCLE_TAG
 
   build-branches-aarch64:
     machine: true
@@ -33,11 +33,11 @@ jobs:
       - run:
           name: Build an aarch64 container image
           command: |
-            docker build -t huangqw/breeze/golang:alpine-gcc -f golang-gcc/Dockerfile golang-gcc
-            docker run -v $(pwd):/go/src/github.com/wise2c-devops/pagoda -w /go/src/github.com/wise2c-devops/pagoda huangqw/breeze/golang:alpine-gcc go build
-            docker build -t huangqw/breeze/pagoda:aarch64-$CIRCLE_BRANCH .
+            docker build -t huangqw/devops/golang:alpine-gcc -f golang-gcc/Dockerfile golang-gcc
+            docker run -v $(pwd):/go/src/github.com/wise2c-devops/pagoda -w /go/src/github.com/wise2c-devops/pagoda huangqw/devops/golang:alpine-gcc go build
+            docker build -t huangqw/pagoda:aarch64-$CIRCLE_BRANCH .
             docker login -u huangqw -p Hqw@ll1107
-            docker push huangqw/breeze/pagoda:aarch64-$CIRCLE_BRANCH
+            docker push huangqw/pagoda:aarch64-$CIRCLE_BRANCH
 
   build-tags-aarch64:
     resource_class: arm.medium
@@ -47,11 +47,11 @@ jobs:
       - run:
           name: Build an aarch64 container image
           command: |
-            docker build -t huangqw/breeze/golang:alpine-gcc -f golang-gcc/Dockerfile golang-gcc
-            docker run -v $(pwd):/go/src/github.com/wise2c-devops/pagoda -w /go/src/github.com/wise2c-devops/pagoda huangqw/breeze/golang:alpine-gcc go build
-            docker build -t huangqw/breeze/pagoda:aarch64-$CIRCLE_TAG .
+            docker build -t huangqw/devops/golang:alpine-gcc -f golang-gcc/Dockerfile golang-gcc
+            docker run -v $(pwd):/go/src/github.com/wise2c-devops/pagoda -w /go/src/github.com/wise2c-devops/pagoda huangqw/devops/golang:alpine-gcc go build
+            docker build -t huangqw/pagoda:aarch64-$CIRCLE_TAG .
             docker login -u huangqw -p Hqw@ll1107
-            docker push huangqw/breeze/pagoda:aarch64-$CIRCLE_TAG
+            docker push huangqw/pagoda:aarch64-$CIRCLE_TAG
 
   build-branches-multi-arch:
     machine: true
@@ -59,11 +59,11 @@ jobs:
       - run:
           name: Build a multi-arch container image
           command: |
-            docker manifest create huangqw/breeze/pagoda:$CIRCLE_BRANCH huangqw/breeze/pagoda:amd64-$CIRCLE_BRANCH huangqw/breeze/pagoda:aarch64-$CIRCLE_BRANCH
-            docker manifest annotate huangqw/breeze/pagoda:$CIRCLE_BRANCH huangqw/breeze/pagoda:amd64-$CIRCLE_BRANCH --os linux --arch amd64
-            docker manifest annotate huangqw/breeze/pagoda:$CIRCLE_BRANCH huangqw/breeze/pagoda:aarch64-$CIRCLE_BRANCH --os linux --arch arm64
+            docker manifest create huangqw/pagoda:$CIRCLE_BRANCH huangqw/breeze/pagoda:amd64-$CIRCLE_BRANCH huangqw/breeze/pagoda:aarch64-$CIRCLE_BRANCH
+            docker manifest annotate huangqw/pagoda:$CIRCLE_BRANCH huangqw/breeze/pagoda:amd64-$CIRCLE_BRANCH --os linux --arch amd64
+            docker manifest annotate huangqw/pagoda:$CIRCLE_BRANCH huangqw/breeze/pagoda:aarch64-$CIRCLE_BRANCH --os linux --arch arm64
             docker login -u huangqw -p Hqw@ll1107
-            docker manifest push huangqw/breeze/pagoda:$CIRCLE_BRANCH
+            docker manifest push huangqw/pagoda:$CIRCLE_BRANCH
 
   build-tags-multi-arch:
     machine: true
@@ -71,11 +71,11 @@ jobs:
       - run:
           name: Build a multi-arch container image
           command: |
-            docker manifest create huangqw/breeze/pagoda:$CIRCLE_TAG huangqw/breeze/pagoda:amd64-$CIRCLE_TAG huangqw/breeze/pagoda:aarch64-$CIRCLE_TAG
-            docker manifest annotate huangqw/breeze/pagoda:$CIRCLE_TAG huangqw/breeze/pagoda:amd64-$CIRCLE_TAG --os linux --arch amd64
-            docker manifest annotate huangqw/breeze/pagoda:$CIRCLE_TAG huangqw/breeze/pagoda:aarch64-$CIRCLE_TAG --os linux --arch arm64
+            docker manifest create huangqw/pagoda:$CIRCLE_TAG huangqw/breeze/pagoda:amd64-$CIRCLE_TAG huangqw/breeze/pagoda:aarch64-$CIRCLE_TAG
+            docker manifest annotate huangqw/pagoda:$CIRCLE_TAG huangqw/breeze/pagoda:amd64-$CIRCLE_TAG --os linux --arch amd64
+            docker manifest annotate huangqw/pagoda:$CIRCLE_TAG huangqw/breeze/pagoda:aarch64-$CIRCLE_TAG --os linux --arch arm64
             docker login -u huangqw -p Hqw@ll1107
-            docker manifest push huangqw/breeze/pagoda:$CIRCLE_TAG
+            docker manifest push huangqw/pagoda:$CIRCLE_TAG
 
 workflows:
   version: 2
